.aws/cfn.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Laravel-SNS cfn Template

Parameters:
  InstanceType:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.nano
      - t2.micro
      - t2.small
      - t2.medium
    Description: Select EC2 instance type.
  KeyPair:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Select KeyPair Name.

Resources:
  cfnVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 192.168.0.0/16
      Tags:
        - Key: Name
          Value: laravel-sns-vpc
  cfnPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 192.168.11.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: laravel-sns-public-subnet
      VpcId: !Ref cfnVpc
  cfnInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: laravel-sns-igw
  cfnAttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref cfnVpc
      InternetGatewayId: !Ref cfnInternetGateway
  cfnPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: laravle-sns-public-rt
      VpcId: !Ref cfnVpc
  cfnPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: cfnInternetGateway
    Properties:
      RouteTableId: !Ref cfnPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref cfnInternetGateway
  cfnPublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref cfnPublicSubnet
      RouteTableId: !Ref cfnPublicRouteTable

  cfnPrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 192.168.21.0/24
      Tags:
        - Key: Name
          Value: laravel-sns-private-subnet
      VpcId: !Ref cfnVpc
  cfnNatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt [cfnNatGatewayEip, AllocationId]
      SubnetId: !Ref cfnPublicSubnet
      Tags:
        - Key: Name
          Value: laravel-sns-nat
  cfnNatGatewayEip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  cfnPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: laravle-sns-private-rt
      VpcId: !Ref cfnVpc
  cfnPrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref cfnPrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref cfnNatGateway
  cfnPrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref cfnPrivateSubnet
      RouteTableId: !Ref cfnPrivateRouteTable
